--- a/getfedora.org/data/content/atomic/prerelease/index.html
+++ b/getfedora.org/data/content/atomic/prerelease/index.html
@@ -327,6 +327,8 @@
         <h3>${_('Other Downloads')}</h3>
           <ul>
             <li><p><a href="${global_variables.release['manual_pre_atomic_iso_url']}">${_('Atomic Host ISO image (%sMB)') % global_variables.iso_size['manual_pre_atomic_iso']}</a></p></li>
+            <li><p><a href="${global_variables.path['download']}/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Docker/x86_64/images/Fedora-Docker-Base-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.x86_64.tar.xz">${_('Docker Image (%sMB)') % global_variables.iso_size['pre_x86_64_docker']}</a></p></li>
+            <li><p><a href="https://cloud.fedoraproject.org/">Fedora Cloud Base images</a></p></li>
           </ul>
         <div class="top-space bottom-margin"><h4>${_('Resources')}</h4></div>
           <p><i class="fa fa-fw fa-sm header-icon fa-globe"></i>${Markup(_('&lt;a href="https://www.projectatomic.io/docs/quickstart/"&gt;&lt;strong&gt;Project Atomic: Getting Started&lt;/strong&gt;&lt;/a&gt;'))}</p>
